Changes in Caudium 1.4.x since Caudium 1.4.14
--------------------------------------------
- Caudium RC script now display Caudium startup error if any and just tell if
  startup failed.
  (Bertrand LUPART - backported from r5825)
- Caudium now display the error code and message when it can't talk to the
  watchdog.
  (Bertrand LUPART - backported from r5822)
- Caudium.HTTP.set_cookie() added for setting a cookie to the browser.
  (Bertrand LUPART)
- Only consider specified pike when using --with-pike rather than also
  checking a list of possible pike locations.
  (Bill Welliver and Martin Baehr / Backport from Bertrand LUPART)
- Added --with-any-pike-version to disable standard version compatibility
  (Bill Welliver and Martin Baehr / Backport from Bertrand LUPART) 
- Caudium.sexpr("10 + 1") nor Caudium.sexpr("1+1") would produce the expected 
  result.
  (Closes Google Issue #2)
  (Bertrand LUPART)

Changes in Caudium 1.4.14 since Caudium 1.4.12
--------------------------------------------
- New demo certificate with extended expiration date.
  (Henrik Andreasson)
- Avoid a backtrace when <cimg> is called without src atrribute.
  (Bertrand LUPART)
- Using <insert file="foo.php"> and setting up Uniscript to parse RXML in PHP's
  result won't freeze your server anymore.
  This feature should be still discussed.
  (Bertrand LUPART)
- PATH_INFO how allows to pass variables into URL like:
  http://domain.tld/file.html/foo=bar/baz=gazonk
  Those are stored into id->misc->path_info_variables and
  id->misc->path_info_variables id->misc->path_info_empty_variables
  (Bertrand LUPART)
- Added CAUDIUM_SITE_ID environment variables for being able to get it from
  external scripts.
  (Bertrand LUPART)
- Fix handling of invalid date strings in Caudium.is_modified() and 
  friends on systems with threadsafe strptime() (like Linux.) Should fix  
  some fatal errors.
    (Bill Welliver)
- Fix XML encoding of strings in _Caudium.xml_encode_mapping and friends.