@@ -43,6 +43,7 @@ string pikever = sprintf("%u.%u.%u/", __REAL_MAJOR__, __REAL_MINOR__, __REAL_BUI
 array(array(string | array(string))) arguments = ({
   ({"quiet", Getopt.NO_ARG, ({"--quiet"})}),
   ({"truss", Getopt.NO_ARG, ({"--truss"})}),
+  ({"dtruss", Getopt.NO_ARG, ({"--dtruss"})}),
   ({"strace", Getopt.NO_ARG, ({"--strace"})}),
   ({"ltrace", Getopt.NO_ARG, ({"--ltrace"})}),
   ({"ktrace", Getopt.NO_ARG, ({"--ktrace"})}),
@@ -752,6 +753,10 @@ int act_on_args()
     {
         case "truss":
           options->precmd=({"truss"});
+          options->once=1;
+          break;
+        case "dtruss":
+          options->precmd=({"dtruss", "-f"});
           options->once=1;
           break;
         case "strace":
